# ContentCoder-Py

./: .gitignore  ContentCoder.py  ContentCoder_Examples.ipynb  ContentCodingDictionary.py  LICENSE  README.md  create_export_dir.py  happiestfuntokenizing.py  pyproject.toml
src/contentcoder/: ContentCoder.py  ContentCodingDictionary.py
