[build-system]

requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"


[project]

name = "contentcoder"

version = "1.0.3"

authors = [
	{ name="Ryan L. Boyd", email="ryan@ryanboyd.io" },
]

description = "A generalized implementation of a dictionary-based content coder."

readme = "README.MD"

requires-python = ">=3.10"

dependencies=[]

classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["contentcoder"]
include-package-data = true

[project.urls]

Homepage = "https://github.com/ryanboyd/ContentCoder-Py"

Issues = "https://github.com/ryanboyd/ContentCoder-Py/issues"